:recycle: :: (#59) <DreamService> page.map 사용